# gsoc2026-ml4sci-e2e

./: .gitignore  README.md  Task2_sparse_neural_network.ipynb  modified_Task1_Electron_Photon_Classification.ipynb  pyproject.toml  requirements.txt  setup.py
docs/: results.md  roadmap.md
scripts/: validate_repo.py
src/ml4sci_e2e/: __init__.py  data.py  metrics.py  models.py
tests/: test_smoke.py
tools/: patch_notebooks.py  run_notebook.py
